Add release-only protection profiles